# microservice-essentials

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  azure-pipelines.yml  conanfile.py
examples/: CMakeLists.txt
examples/cli/: CMakeLists.txt  main.cpp
examples/star-wars-starships/: CMakeLists.txt  README.md
examples/star-wars-starships/adapters/: CMakeLists.txt
examples/star-wars-starships/adapters/dummy-starwars-client/: CMakeLists.txt  dummy-starwars-client.cpp  dummy-starwars-client.h
examples/star-wars-starships/adapters/grpc-handler/: CMakeLists.txt  ProtobufGeneration.cmake  api.proto  grpc-handler.cpp  grpc-handler.h
examples/star-wars-starships/adapters/http-handler/: CMakeLists.txt  http-handler.cpp  http-handler.h
examples/star-wars-starships/adapters/http-starwars-client/: CMakeLists.txt  http-starwars-client.cpp  http-starwars-client.h
examples/star-wars-starships/adapters/in-memory-status-db/: CMakeLists.txt  in-memory-status-db.cpp  in-memory-status-db.h
examples/star-wars-starships/adapters/in-memory-status-repo/: CMakeLists.txt  in-memory-status-repo.cpp  in-memory-status-repo.h
examples/star-wars-starships/app/: CMakeLists.txt  main.cpp
examples/star-wars-starships/core/: CMakeLists.txt  core.cpp  core.h
examples/star-wars-starships/ports/: CMakeLists.txt  api.h  model.h  service.h  starwars-client.h  status-db.h  status-repo.h
src/: CMakeLists.txt
src/microservice-essentials/: CMakeLists.txt  context.cpp  context.h  handler.cpp  handler.h  status.cpp  status.h
src/microservice-essentials/cross-cutting-concerns/: CMakeLists.txt  error-forwarding-request-hook.cpp  error-forwarding-request-hook.h  exception-handling-helpers.cpp  exception-handling-helpers.h  exception-handling-helpers.txx  exception-handling-request-hook.cpp  exception-handling-request-hook.h  exception-handling-request-hook.txx  graceful-shutdown.cpp  graceful-shutdown.h
src/microservice-essentials/observability/: CMakeLists.txt  health-manager.cpp  health-manager.h  logger.cpp  logger.h  logging-request-hook.cpp  logging-request-hook.h
src/microservice-essentials/performance/: CMakeLists.txt  caching-request-hook.cpp  caching-request-hook.h  caching-request-hook.txx
src/microservice-essentials/reliability/: CMakeLists.txt  circuit-breaker-request-hook.cpp  circuit-breaker-request-hook.h  retry-request-hook.cpp  retry-request-hook.h
src/microservice-essentials/request/: CMakeLists.txt  request-decorator.cpp  request-decorator.h  request-hook-factory.cpp  request-hook-factory.h  request-hook.cpp  request-hook.h  request-processor.cpp  request-processor.h  request-type.cpp  request-type.h
src/microservice-essentials/security/: CMakeLists.txt  basic-token-auth-request-hook.cpp  basic-token-auth-request-hook.h  claim-checker-request-hook.cpp  claim-checker-request-hook.h  token-auth-request-hook.cpp  token-auth-request-hook.h
src/microservice-essentials/utilities/: CMakeLists.txt  environment.cpp  environment.h  environment.txx  metadata-converter.cpp  metadata-converter.h  metadata-converter.txx  signal-handler.cpp  signal-handler.h  status-converter.cpp  status-converter.h  status-converter.txx  url.cpp  url.h
test_package/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/microservice-essentials/: CMakeLists.txt  context_test.cpp  handler_test.cpp  status_test.cpp
tests/microservice-essentials/cross-cutting-concerns/: CMakeLists.txt  error-forwarding-request-hook_test.cpp  exception-handling-request-hook_test.cpp  graceful-shutdown_test.cpp
tests/microservice-essentials/observability/: CMakeLists.txt  logger_test.cpp  logging-request-hook_test.cpp
tests/microservice-essentials/performance/: CMakeLists.txt  caching-request-hook_test.cpp
tests/microservice-essentials/reliability/: CMakeLists.txt  circuit-breaker-request-hook_test.cpp  retry-request-hook_test.cpp
tests/microservice-essentials/request/: CMakeLists.txt  request-decorator_test.cpp  request-hook-factory_test.cpp  request-hook_test.cpp  request-processor_test.cpp
tests/microservice-essentials/security/: CMakeLists.txt  claim-checker-request-hook_test.cpp  token-auth-request-hook_test.cpp
tests/microservice-essentials/utilities/: CMakeLists.txt  environment_test.cpp  metadata-converter_test.cpp  signal-handler_test.cpp  status-converter_test.cpp  url_test.cpp
tests/utilities/: CMakeLists.txt  history_logger.h
