enable_testing()
find_package(Catch2 3 CONFIG REQUIRED)
find_package(nlohmann_json CONFIG)
add_executable(tests)
add_subdirectory(microservice-essentials)    
target_link_libraries(tests PRIVATE Catch2::Catch2WithMain nlohmann_json::nlohmann_json microservice-essentials)
include(CTest)
include(Catch)
catch_discover_tests(tests)
